Update packages and fix small issues from update

--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -13,6 +13,10 @@
 }
 
 .link {
+  text-decoration: none;
+}
+
+.linkText {
   background-color: blueviolet;
   color: chartreuse;
   font-weight: 700;
