--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -63,14 +63,17 @@
   max-width: 800px;
 }
 
+.link {
+  text-decoration: none;
+}
+
 .card {
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
-  text-decoration: none;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  width: 348px;
 }
 
 .logo {
